[project]
name = "mcp-camara"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vrtornisiello", email = "vrtornisiello@gmail.com" }
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mcp>=1.13.0",
    "pydantic>=2.11.7",
    "unidecode (>=1.4.0,<2.0.0)",
]

[dependency-groups]
dev = [
    "rich>=14.1.0",
]

[project.scripts]
mcp-camara = "mcp_camara.main:main"

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"
